clusters/CHANGE_TO_CLUSTER_NAME/workload/federation/clients/client-1/mtls-client.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: originate-mtls-federator-client
  namespace: tc-federation
spec:
  workloadSelector:
    matchLabels:
      app: federator-client
  host: ${data_producer1_domain}
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: MUTUAL
        credentialName: federator-client-mtls-mesh-aws # this must match the secret created earlier to hold client certs, and works only when DR has a workloadSelector
        sni: ${data_producer1_domain}
        # subjectAltNames: # can be enabled if the certificate was generated with SAN as specified in previous section
        # - ${data_producer1_domain}
